More Java 11 fixes