@@ -53,7 +53,7 @@ public class TableRowTest extends TestCase implements DataTypesDefinition {
 
     public static final RowField[] TEST_FIELDS = {
         new RowField(Float.valueOf(1f), DATA_SHORT_FLOAT),
-        new RowField(new Short((short) 2), DATA_SHORT_INTEGER),
+        new RowField(Short.valueOf((short) 2), DATA_SHORT_INTEGER),
         new RowField(new VPFDate("200301301149.00000"), DATA_DATE_TIME)
     };
 
